# ToBeNamedLaterGame

./: .gitignore  CMakeLists.txt  README.md
assets/: create_sprite_sheet.py
assets/enemies/: enemies.txt
assets/levels/: dungeon.txt
src/: main  main.c
